improving the mechanics of entity initialization